Fixed center alignment issues
Top bar, search and menus were not aligned to center properly

--- a/app/assets/stylesheets/atomic/_size.scss
+++ b/app/assets/stylesheets/atomic/_size.scss
@@ -1,5 +1,11 @@
 .half-width {
   width: 50%;
+
+  &--medium-up {
+    @include breakpoint(medium up) {
+      width: 50%;
+    }
+  }
 }
 
 .full-width {
