--- a/app/assets/stylesheets/components/_search_logos.scss
+++ b/app/assets/stylesheets/components/_search_logos.scss
@@ -1,15 +1,8 @@
-.search_logos {
-
-}
-
 .search_logos__bot-logo {
   height: 45px;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 .search_logos__discord-logo {
-  height: 40px;
-  margin-left: 5px;
-  margin-right: 5px;
+  height: 45px;
+  margin-left: 16px;
 }
